Исправленна ошибка в функции copyFile() - переставлены местами переменные userConfigFile и commonConfigFile. А также добавлена перезагрузка  Netbeans с изменениями формы и файлов свойств.

--- a/src/com/petriaiev/langchooser/Bundle.properties
+++ b/src/com/petriaiev/langchooser/Bundle.properties
@@ -11,4 +11,4 @@ LC_userConfFileCreateError=User configuration file creation error
 LC_langApplyError=Language applying error
 LanguageChooserTopComponent.saveButton.text=Save
 LanguageChooserTopComponent.warningLabel.text=NetBeans should be restarted to apply selected language
-LanguageChooserTopComponent.needShutDown.text=Shut down NetBeans after saving
+LanguageChooserTopComponent.needRestart.text=Restart NetBeans after saving
